# My_FoV_Optimization

./: .gitignore  .gitignore.swp  README.md  analyze_point_uncertainty.py  brute_force_xyz_angles_dir_ang.csv  calculate_registration_error.sh  detection.sh  detection_workorder.sh  eval_pose_error.py  evaluate_visual_localization.sh  example_s.py  extract_3dpoints_and_view_dir.sh  mapping.sh  planning.sh  planning_segmentation.sh  read_bag.py  reconstruct.sh  reconstruction_commandline  registration.sh  visualize.sh
Manifold_cpp/: CMakeLists.txt  brute_force_xyz_angles_dir_ang.csv  brute_force_xyz_indexes_two_degree_nonorm.csv  eigen_trial.cpp  error_vis.py  gen_brute_force_directions.py  gen_rotations.py  jacobian_vis.py  manifold_old_need_to_cast_to_f.cpp  manifold_test.cpp  trajectory_test.cpp  txttocsv.py  visualquiver.py
Manifold_cpp/experiment_manager/: CMakeLists.txt  experiment_manager.h
Manifold_cpp/manifold/: CMakeLists.txt  manifold.h
Manifold_cpp/monte_carlo/: CMakeLists.txt  monte_carlo.h  monte_carlo_FIF.h
Manifold_cpp/mybuild/: CMakeCache.txt  Makefile  cmake_install.cmake  path.csv  points.csv  two_walls_points_w.csv
Manifold_cpp/mybuild/experiment_manager/: Makefile  cmake_install.cmake
Manifold_cpp/mybuild/manifold/: Makefile  cmake_install.cmake
Manifold_cpp/mybuild/monte_carlo/: Makefile  cmake_install.cmake
Manifold_cpp/mybuild/point_cloud_data_loader/: Makefile  cmake_install.cmake
Manifold_cpp/mybuild/trajectory_optimization_on_manifold/: Makefile  (+1 more)
Manifold_cpp/point_cloud_data_loader/: CMakeLists.txt  cloud_loader.h
Manifold_cpp/trajectory_optimization_on_manifold/: CMakeLists.txt  trajectory_optimizer.h
(+19 files in other folders)
